Làm AuctionDetailController, AuctionListController, SellerItemController